snapshots/pull_request_review/changes_requested.snap
---
source: src/main.rs
info:
  author_name_length: 8
  colour_hex: "#89B4FA"
  description_length: 4
  title_length: 85
---
embeds:
  - author:
      icon_url: "https://avatars.githubusercontent.com/u/58985301?v=4"
      name: sgoudham
      url: "https://github.com/sgoudham"
    color: 9024762
    description: test
    title: "[catppuccin-rfc/polybar] Pull request changes requested: #3 chore: Configure Renovate"
    url: "https://github.com/catppuccin-rfc/polybar/pull/3#pullrequestreview-2311206830"
